--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,12 +10,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <application
+        android:name="com.hy.application.BSSApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.hy.basketballshoesshow.MainActivity"
+            android:name="com.hy.basketballshoesshow.Welcome"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".SeriesListActivity"/>
         <activity android:name=".IntroduceActivity"/>
+        <activity android:name=".GenerationListActivity"/>
+        <activity android:name=".ColorListActivity"/>
+        <activity android:name=".ShoesListActivity"/>
+        <service android:name="com.hy.services.GetPicService"/>
     </application>
 </manifest>
