--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <application
@@ -16,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.hy.basketballshoesshow.Welcome"
+            android:name="com.hy.basketballshoesshow.WelcomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".BrandListActivity"/>
         <activity android:name=".SeriesListActivity"/>
         <activity android:name=".IntroduceActivity"/>
         <activity android:name=".GenerationListActivity"/>
         <activity android:name=".ColorListActivity"/>
         <activity android:name=".ShoesListActivity"/>
-        <service android:name="com.hy.services.GetPicService"/>
+        <activity android:name=".DetailActivity"/>
+        <service android:name="com.hy.services.GetDataService"/>
+        
     </application>
 </manifest>
