--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,5 +33,8 @@
         <activity android:name=".DetailActivity"/>
         <service android:name="com.hy.services.GetDataService"/>
         
+        <activity android:name="com.hy.addshoes.activity.AddShoesActivity"/>
+        <activity android:name="com.hy.addshoes.activity.CilpImageActivity"/>
+        
     </application>
 </manifest>
