--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".SeriesListActivity"/>
         <activity android:name=".IntroduceActivity"/>
         <activity android:name=".ColorListActivity"/>
-        <activity android:name=".ShoesListActivity"/>
+        <activity android:name=".ShoesListActivity" android:screenOrientation="portrait"/>
         <activity android:name=".DetailActivity"/>
         <service android:name="com.hy.services.GetDataService"/>
         
